fix chat form scrollbar

--- a/src/scss/block/chat/form.scss
+++ b/src/scss/block/chat/form.scss
@@ -74,7 +74,7 @@
 		::-webkit-scrollbar { height: 0px; }
 	}
 
-	.editableWrap { @include text-common; max-height: 352px; overflow-y: scroll; background-color: transparent; }
+	.editableWrap { @include text-common; max-height: 352px; overflow-x: hidden; overflow-y: scroll; background-color: transparent; }
 	.editableWrap {
 		.editable, .placeholder { padding: 16px; }
 	}
